<resources>
    <string name="app_name" translatable="false">Verge</string>
    <string name="app_package" translatable="false">com.vergepay.wallet</string>
    <string name="almost_equal_to" translatable="false">≈</string>
    <string name="action_scan_qr_code">Scan</string>
    <string name="action_share">Share</string>
    <string name="action_nearby_share">Nearby share</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit_label">Edit label</string>
    <string name="action_empty_wallet">Use all funds</string>
    <string name="action_sweep_wallet">Sweep wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sign_verify_message">Sign/verify message</string>
    <string name="action_get_verge">Get Verge</string>
    <string name="action_account_details">Account details</string>
    <string name="action_exchange_history">Exchange history</string>
    <string name="action_new_address">New address</string>
    <string name="action_swap_coins">Swap coins</string>
    <string name="action_delete">Delete</string>
    <string name="action_change_address_type">Change address type</string>
    <string name="error_generic">Error occurred while performing action</string>
    <string name="error_could_not_read_wallet">Could not read wallet</string>
    <string name="error_camera">Could not access the device camera</string>
    <string name="button_ok">OK</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_finish">Finish</string>
    <string name="button_return">Return</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_default">Default</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_delete">Delete</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="button_connect">Connect</string>
    <string name="button_sign">Sign</string>
    <string name="button_verify">Verify</string>
    <string name="button_skip">Skip</string>
    <string name="button_retry">Retry</string>
    <string name="button_download">Download</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_execute">Execute</string>
    <string name="button_install">Install</string>
    <string name="button_exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="erase_address">Erase address</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="wallet_title_request">receive</string>
    <string name="wallet_title_balance">balance</string>
    <string name="wallet_title_send">send</string>
    <string name="wallet_title_swap">swap</string>
    <string name="wallet_title_games">games</string>
    <string name="wallet_locked_message">Your wallet is locked</string>
    <string name="wallet_is_not_locked_message">Your wallet is not locked</string>
    <string name="unlock_wallet_title">Unlock your wallet</string>
    <string name="unlocking_wallet_error_title">Could not unlock your wallet</string>
    <string name="unlocking_wallet_error_detail">Are you using the correct password? Please make sure that your password was entered correctly. Attempt to restore using the recovery phrase if this error persists.</string>
    <string name="powered_by">Powered by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_wallet">Wallet</string>
    <string name="fee">Transaction fee</string>
    <string name="send">Send</string>
    <string name="trade">Exchange</string>
    <string name="receive">Receive</string>
    <string name="welcome_title">VergeXVR</string>
    <string name="welcome_text">Welcome to TORdroid</string>
    <string name="create_wallet">Create a new wallet</string>
    <string name="restore_wallet">Restore a wallet</string>
    <string name="override_wallet_warning_title">Override existing wallet?</string>
    <string name="override_new_wallet_warning_message">If you create a new wallet, your existing wallet will be lost unless you backed up you <i>recovery phrase</i>.</string>
    <string name="override_restore_wallet_warning_message">If you restore a wallet, your existing wallet will be lost unless you backed up you <i>recovery phrase</i>.</string>
    <string name="incompatible_device_warning_title">Incompatible device</string>
    <string name="incompatible_device_warning_message">This device cannot perform certain cryptographic functions due to software or hardware bugs.\nThis could be solved with an update from the device manufacturer.\n\nOpen an issue if you have any questions: github.com/vergecurrency/tordroid</string>
    <string name="seed_info">This is your <i>recovery phrase</i>, which is used to generate the keys for your wallet. Please write it down on a paper and keep it in a <b>SECURE</b> place, as you would with paper money. Anyone with access to it has access to the wallet\'s funds.\n <b><u>If you lose your recovery phrase, your wallet cannot be recovered</u></b>.</string>
    <string name="seed_title">Your recovery phrase</string>
    <string name="seed_regenerate_title">Touch to generate a new recovery phrase</string>
    <string name="backed_up_seed">I have safely stored my recovery phrase</string>
    <string name="restore_info">Please enter your recovery seedphrase words, or scan a private key QR code using the QR icon.</string>
    <string name="restore_seed_protected">Use a BIP39 passphrase</string>
    <string name="restore_skip_title">Skipping verification</string>
    <string name="restore_skip_info1">Please make sure that your recovery phrase matches the following:</string>
    <string name="restore_skip_info2">It is recommended not to skip verification, so that any misspellings could be detected.</string>
    <string name="restore_error_checksum">Recovery phrase is not valid. Check if some words are misspelled.</string>
    <string name="restore_error_words">Recovery phrase contains unrecognized words.</string>
    <string name="restore_error_mismatch">Recovery phrase entered does not match your recovery phrase.</string>
    <string name="restore_error">Could not verify your recovery phrase. %1$s</string>
    <string name="extra_entropy">Extra entropy</string>
    <string name="wallet_update_title">New version available</string>
    <string name="wallet_update_message">A new version of TORdroid is available, it contains new features and fixes.</string>
    <string name="pay_with">Send with</string>
    <string name="exchange_and_pay_title">Exchange and send</string>
    <string name="page_label_receive_xvg">Receive $XVG</string>
    <string name="page_label_send_xvg">Send $XVG</string>
    <string name="page_label_swap">Swap</string>
    <string name="page_label_games">Games</string>
    <string name="ambiguous_address_title">Ambiguous address</string>
    <string name="ambiguous_address_message">Please select the correct coin type</string>
    <string name="wallet_transactions_coinbase">Mined</string>
    <string name="history_empty">No Verge (XVG) received yet!\n\nSwipe down to refresh the balance.\n\nSwipe left or right for your receiving address, swipe right to send $XVG!</string>
    <string name="sent_to">sent to</string>
    <string name="received_with">received with</string>
    <string name="received_from">received from</string>
    <string name="get_tx_info_error">Could not get transaction information</string>
    <string name="disconnected_label">No connection</string>
    <string name="connection_status_network_waiting">Waiting for network</string>
    <string name="connection_status_tor_starting">Starting Tor</string>
    <string name="connection_status_tor_stopped">Tor stopped</string>
    <string name="connection_status_tor_failed">Tor failed to start</string>
    <string name="connection_status_connecting_over_tor">Tor ready, connecting to Verge</string>
    <string name="connection_status_syncing_over_tor">Syncing wallet over Tor</string>
    <string name="connection_status_connected_over_tor">Connected to Verge over Tor</string>
    <string name="connection_status_reconnecting_over_tor">Wallet loaded, reconnecting</string>
    <string name="wallet_summary_widget_description">Current wallet amount and USD value</string>
    <string name="wallet_summary_empty_amount">No wallet loaded</string>
    <string name="wallet_summary_empty_value">Open Verge</string>
    <string name="wallet_summary_value_unavailable">Value unavailable</string>
    <string name="wallet_summary_status_open_phone">Open Verge on your phone</string>
    <string name="no_wallet_pocket_selected">No wallet account selected</string>
    <string name="get_tx_broadcast_error">Transaction broadcast error</string>
    <string name="title_activity_connections">Connections</string>
    <string name="pref_summary_connections">Choose which Verge server the wallet uses and reconnect immediately.</string>
    <string name="connections_status_server_label">Server</string>
    <string name="connections_status_endpoint_state">%1$s - %2$s</string>
    <string name="pref_title_saved_connections">Saved servers</string>
    <string name="pref_summary_saved_connections">Verge randomizes across this saved server pool on startup and falls through the rest immediately if one fails.</string>
    <string name="pref_title_verge_connection_profile">Verge server</string>
    <string name="pref_summary_verge_connection_profile">Pick a specific Verge server. All connections are routed through Tor.</string>
    <string name="pref_connection_option_legacy_onion">7eagtn6nsmlyjhjv647ejj4j4orgb2cotoc5dl73qpamhvbvioao4zad.onion:50001</string>
    <string name="pref_connection_option_electrum_cloud">electrum-verge.cloud:50001</string>
    <string name="pref_connection_option_electrum_cloud_ssl">electrum-verge.cloud:50002</string>
    <string name="pref_connection_option_electrumx_cloud">electrumx-verge.cloud:50001</string>
    <string name="pref_connection_option_electrumx_cloud_ssl">electrumx-verge.cloud:50002</string>
    <string name="pref_connection_option_electrumx_onion_host1">j24ru5qhxuzw3iq6kxhwpxdg4ulzipziflbxsysmo6znsv4i4vaiqmid.onion:50001</string>
    <string name="pref_connection_selected">Selected</string>
    <string name="pref_connection_connected">Connected now</string>
    <string name="pref_connection_connecting">Connecting now</string>
    <string name="pref_connection_fallback_active">Preferred server unavailable, fallback active</string>
    <string name="connections_status_trying_saved_servers">Trying saved servers</string>
    <string name="pref_title_add_custom_connection_dialog">Add custom server</string>
	<string name="use_pincode_only">Use pincode only</string>
    <string name="use_fingerprint_pincode">Use fingerprint + pincode</string>
    <string name="skip_button_label">Skip</string>
    <string name="app_lock_description">App lock allows you to secure your wallet using PIN-code or fingerprint (if it\'s present on your phone). You can add app lock later in Settings menu</string>
    <string name="add_fingerprint_label">Touch your fingerprint sensor to add fingerprint app lock</string>
    <string name="enter_your_pincode">Enter your pincode</string>
	<string name="touch_fingerprint_label">Scan your finger to unlock app</string>
    <string name="https_vergecurrency_com_get_verge" translatable="false">https://vergecurrency.com/get-verge/</string>
</resources>