<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_fingerprint" />

    <TextView
        android:id="@+id/title_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image"
        android:text="@string/touch_fingerprint_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_check"
        android:text="@string/add_fingerprint_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/pincode_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_add"
        android:text="@string/enter_your_pincode" />

</RelativeLayout>