<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.vergepay.wallet.ui.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:padding="@dimen/standard_margin"
            android:src="@drawable/intro_logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_title"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/quarter_standard_margin"
                android:gravity="center"
                android:text="@string/welcome_subtitle"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_wallet"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="@dimen/intro_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_wallet"
                />

            <Button
                android:id="@+id/restore_wallet"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="@dimen/intro_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/restore_wallet"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>


