<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:coinomi="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/amount_margin_top"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/amount_margin_bottom">

        <ImageView
            android:id="@+id/connected_dot"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_gravity="right"
            android:contentDescription="TODO"
            android:visibility="gone"
            coinomi:srcCompat="@drawable/generic_green_circle" />

        <com.vergepay.wallet.ui.widget.Amount
            android:id="@+id/account_exchanged_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            coinomi:single_line="true">

        </com.vergepay.wallet.ui.widget.Amount>

        <com.vergepay.wallet.ui.widget.Amount
            android:id="@+id/account_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            coinomi:show_big="true">

        </com.vergepay.wallet.ui.widget.Amount>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/connection_label"
            style="@style/ErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/amount_margin_bottom"
            android:text="@string/disconnected_label"
            android:textColor="#FF6E40"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/history_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/history_empty"
            android:textSize="@dimen/history_empty" />

        <TextView
            android:id="@+id/get_verge"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/https_vergecurrency_com_get_verge"
            android:textColor="#42A5F5"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</LinearLayout>